web/app/themes/ppj/src/sass/components/search.sass
.search
  $border: .1rem solid $color-light
  margin: 0 $common-spacing

  @include bp('portrait')
    text-align: center

  &__title
    @extend .common-header
    @include bp('portrait')
      margin: auto
      margin-bottom: $common-spacing

  &__prompt
    @include bp('portrait')
      font-size: $font-size-medium

  &__form
    position: relative

    @include bp('portrait')
      margin: auto
      width: 40rem

  &__geolocation
    display: flex
    font-size: $font-size-small
    font-weight: $font-weight-bold
    margin: $common-spacing 0
    text-decoration: underline
    transition: $main-transition-duration

    @include bp('portrait')
      justify-content: center

    &-icon
      $size: 2rem
      height: $size
      margin-right: .4rem
      width: $size

    &--is-busy
      opacity: 0.5

  &__input
    border: .2rem solid $color-medium
    border-radius: 2em
    box-sizing: border-box
    display: block
    font-weight: $font-weight-bold
    height: 4rem
    margin: $common-spacing 0
    padding: $common-spacing/2 $common-spacing
    width: 100%

  &__button-search
    background-color: $color-main
    border-radius: 2rem
    color: $color-white
    display: block
    height: 4rem
    position: absolute
    right: 0
    top: 0
    transition: background-color $main-transition-duration
    width: 4rem

    &:disabled
      background-color: $color-light

    &-circle
      $diameter: 1.7rem
      background: inherit
      border: .25rem solid $color-white
      border-radius: 1.1rem
      display: inline-block
      height: $diameter
      position: absolute
      right: 1.1rem
      top: 1.1rem
      width: $diameter

    &-rectangle
      background-color: $color-white
      height: .7rem
      position: absolute
      right: 2.5rem
      top: 2.2rem
      transform: rotate(45deg)
      width: .4rem

  &__jobs-available
    font-weight: $font-weight-bold
    margin: $common-spacing/2 0

    @include bp('portrait')
      text-align: left
      position: relative
      top: 4rem

  &__view-controls
    display: flex
    justify-content: space-between
    width: 100%

  &__view-container
    margin: $common-spacing/2 0

  &__map-view
    @include bp('portrait')
      display: flex
      flex-direction: row-reverse
      justify-content: space-between

  &__rectangle
    border-bottom: $border
    border-top: $border
    border-bottom-width: .2rem
    border-top-width: .2rem
    box-sizing: border-box

    @include bp('portrait')
      position: absolute
      top: 0
      bottom: 0
      left: 0
      right: 0

  &__map-container
    @include bp('portrait')
      flex-basis: 66%

  &__view-list-container
    @include bp('portrait')
      flex-basis: 33%
      margin-right: $common-spacing
      position: relative

  &__view-list
    @include bp('portrait')
      overflow-y: auto
      height: 100%

    &-element
      background-color: $color-white
      border-top: $border
      cursor: pointer
      padding: $common-spacing/2 $common-spacing

      &:first-child
        border-top: none

      &:last-child
        @include bp('portrait')
          position: relative

      // https://codepen.io/anon/pen/opBRLp
      &:nth-last-child(2):after
        @include bp('portrait')
          background: linear-gradient(to top, $color-white, $color-transparent)
          bottom: 0
          content: ''
          display: block
          height: $common-spacing * 5
          left: 0
          position: absolute
          right: 0

      &:hover:nth-last-child(2):after
        cursor: s-resize

  &__square-box
    @include bp('portrait')
      height: 0
      padding-bottom: 100%
      position: relative
      width: 100%

  &__map
    display: flex
    justify-content: center
    height: 20rem
    width: 100%

    @include bp('portrait')
      bottom: 0
      height: 100%
      left: 0
      position: absolute
      right: 0
      top: 0

  &__map-marker
    $c: &
    $size: 1.5rem
    border-color: $color-dark
    border-style: solid
    border-width: .4rem
    border-radius: $size
    box-shadow: 0 0 3px 3px rgba(0,0,0,.2)
    cursor: pointer
    height: $size
    position: absolute
    width: $size

    &--job-location-group
      background-color: $color-white
      border-color: $color-dark

      &#{$c}--selected // .search__map-marker--job-location-group.search__map-marker--selected
        border-color: $color-secondary
        border-width: .6rem

    &--datum
      box-shadow: none


  &__job-post
    font-size: $font-size-small
    line-height: 1.2
    padding: $common-spacing/2 0
    position: relative

    &-distance
      font-weight: $font-weight-bold

    &-position
      font-weight: $font-weight-bold

    &-salary
      font-weight: $font-weight-bold
      position: absolute
      right: 0
      top: $common-spacing/2

    &-prison

    &-link
      bottom: $common-spacing/2
      position: absolute
      right: 0
      text-decoration: underline

  &__pagination-links
    display: flex
    justify-content: space-between

  &__pagination
    display: flex
    font-size: $font-size-small
    justify-content: space-between
    margin: $common-spacing/2 0

    &-skip-link
      color: $color-light
      display: flex
      align-items: center
      margin: 0 $common-spacing
      text-decoration: underline

      &--enabled
        color: $color-dark

    &-page-numbers-container
      align-items: center
      display: flex
      justify-content: space-around
      margin: 0 $common-spacing

      & > *
        width: 2rem

    &-of
      text-align: center

    &-current-page-number
      text-align: right

    &-total-pages

    &-direction, &-link
      border-width: .2rem
      border-style: solid
      border-radius: 1rem
      display: block
      font-size: $font-size-large
      font-weight: $font-weight-bold
      height: 4rem
      transition: all .2s
      width: 4rem

    &-direction
      border-color: $color-light
      color: $color-light
      cursor: initial

      &:first-child
        order: initial

      &:hover ~ .search__pagination-link--enabled
        border-color: $color-dark
        color: $color-dark

      &--enabled
        border-color: $color-dark
        color: $color-dark
        cursor: pointer

        &:hover ~ .search__pagination-link--enabled
          border-color: $color-dark
          color: $color-dark

    &-link
      border-color: $color-light
      color: $color-light

      &:hover
        border-color: $color-dark
        color: $color-dark

    &:not(:hover)

      .search__pagination

        &-link
          color: $color-light

          &--enabled
            border-color: $color-dark
            color: $color-dark

